🔄 MIGRATE TO RENDER: Add PostgreSQL support, Render config files

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
             <artifactId>mariadb-java-client</artifactId>
             <scope>runtime</scope>
         </dependency>
+        
+        <!-- PostgreSQL para Render -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 
         <!-- JWT -->
         <dependency>
