--- a/src/main/resources/application-render.yml
+++ b/src/main/resources/application-render.yml
@@ -1,8 +1,5 @@
 # Configuración para producción en Render
 spring:
-  profiles:
-    active: prod
-  
   # Base de datos PostgreSQL (Render)
   datasource:
     url: ${DATABASE_URL}
@@ -32,7 +29,7 @@ server:
 api:
   security:
     token:
-      secret: ${JWT_SECRET}
+      secret: ${JWT_SECRET:mi-clave-secreta-super-segura-para-jwt-forohub-2024}
 
 # Logging para producción
 logging:
