✨ PRODUCTION READY: Mejoras de seguridad, endpoints públicos y configuración optimizada

--- a/src/main/resources/application-debug.yml
+++ b/src/main/resources/application-debug.yml
@@ -1,48 +1,33 @@
-# Configuración básica para debug en Render
-spring:  
-  # Base de datos (Railway MySQL)
-  datasource:
-    url: ${DATABASE_URL:jdbc:h2:mem:testdb}
-    username: ${MYSQLUSER:sa}
-    password: ${MYSQLPASSWORD:}
-    driver-class-name: ${DATABASE_DRIVER:org.h2.Driver}ción básica para debug en Railway
 spring:
   profiles:
-    active: prod
-  
-  # Base de datos (Railway MySQL)
+    active: debug
   datasource:
-    url: ${MYSQL_URL:jdbc:h2:mem:testdb}
-    username: ${MYSQLUSER:sa}
-    password: ${MYSQLPASSWORD:}
+    url: ${DATABASE_URL:jdbc:h2:mem:testdb}
+    username: ${DB_USERNAME:sa}
+    password: ${DB_PASSWORD:}
     driver-class-name: ${DATABASE_DRIVER:org.h2.Driver}
-  
-  # JPA/Hibernate
   jpa:
     hibernate:
       ddl-auto: create-drop
     show-sql: true
-    database-platform: ${DATABASE_PLATFORM:org.hibernate.dialect.H2Dialect}
-  
-  # H2 Console (solo para debug)
+    properties:
+      hibernate:
+        dialect: ${DATABASE_PLATFORM:org.hibernate.dialect.H2Dialect}
   h2:
     console:
       enabled: true
 
-# Configuración del servidor
 server:
   port: ${PORT:8080}
   error:
     include-message: always
     include-binding-errors: always
 
-# JWT
 api:
   security:
     token:
       secret: ${JWT_SECRET:secret-key-for-testing-only}
 
-# Logging para debug
 logging:
   level:
     com.forohub: DEBUG
