--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,10 @@ services:
       SPRING_DATASOURCE_USERNAME: forohub_user
       SPRING_DATASOURCE_PASSWORD: forohub_password
       JWT_SECRET: super-secret-jwt-key-for-production
+      SPRING_PROFILES_ACTIVE: default
+      PORT: 8081
     ports:
-      - "8080:8080"
+      - "8081:8081"
     depends_on:
       - forohub-db
     networks:
