--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,22 +1,13 @@
+# Configuración base común para ForoHub
 spring:
   application:
     name: forohub
   
-  datasource:
-    url: ${SPRING_DATASOURCE_URL:jdbc:mariadb://localhost:3306/forohub}
-    username: ${SPRING_DATASOURCE_USERNAME:root}
-    password: ${SPRING_DATASOURCE_PASSWORD:password}
-    driver-class-name: org.mariadb.jdbc.Driver
+  # Configuración por defecto - se sobrescribe en cada perfil
+  profiles:
+    active: local
   
-  jpa:
-    hibernate:
-      ddl-auto: validate
-    show-sql: false
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MariaDBDialect
-        format_sql: true
-  
+  # Flyway configuración base (puede ser sobrescrita por perfil)
   flyway:
     baseline-on-migrate: true
     locations: classpath:db/migration
