🔥 FIX CRÍTICO: Eliminar dependencia circular de Flyway
❌ PROBLEMA IDENTIFICADO: Flyway causaba dependencia circular con EntityManagerFactory
✅ SOLUCIÓN APLICADA:
- 🚫 Excluido FlywayAutoConfiguration de autoconfiguración
- 📁 Renombrado migration → migration_disabled
- 🎯 PostgreSQL directo sin interferencias de Flyway
- ⚡ JPA funcionará con ddl-auto: update

DEBE FUNCIONAR: Sin Flyway no hay dependencias circulares

--- a/src/main/resources/application-render.yml
+++ b/src/main/resources/application-render.yml
@@ -15,6 +15,11 @@ spring:
         stringtype: unspecified
         ApplicationName: ForoHub
 
+  # EXCLUSIÓN CRÍTICA: Flyway causa dependencia circular
+  autoconfigure:
+    exclude:
+      - org.springframework.boot.autoconfigure.flyway.FlywayAutoConfiguration
+
   # JPA/Hibernate - CONFIGURACIÓN SIMPLE PARA POSTGRESQL
   jpa:
     hibernate:
@@ -28,11 +33,7 @@ spring:
           lob:
             non_contextual_creation: true
     defer-datasource-initialization: true
-    open-in-view: false
-
-  # Flyway deshabilitado para evitar conflictos
-  flyway:
-    enabled: false# Configuración del servidor
+    open-in-view: false# Configuración del servidor
 server:
   port: ${PORT:10000}
   # Configuración adicional para Render
