🐛 HOTFIX: Corregir sintaxis YAML mal formateada
❌ ERROR CRÍTICO: Comentario pegado al valor boolean
   open-in-view: false# Configuración del servidor

✅ CORRECCIÓN:
   open-in-view: false

   # Configuración del servidor

Spring ya puede parsear todos los valores correctamente

--- a/src/main/resources/application-render.yml
+++ b/src/main/resources/application-render.yml
@@ -33,7 +33,9 @@ spring:
           lob:
             non_contextual_creation: true
     defer-datasource-initialization: true
-    open-in-view: false# Configuración del servidor
+    open-in-view: false
+
+# Configuración del servidor
 server:
   port: ${PORT:10000}
   # Configuración adicional para Render
